@@ -1,5 +1,8 @@
 vNEXT (in development)
 
+ * Fix handling of multiple long lines sometimes dropping part of the line
+ * Support lines with 8191 bytes of tags, as allowed by the message-tags spec
+
 v0.10.1
 
  * Added NickChangeFailed event for when nicknames are in use, banned, etc
